--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>QR Code Generator</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <div class="container">
@@ -47,7 +48,6 @@
             </div>
             <div class="input-section">
                 <input type="text" class="qr-text" placeholder="Enter text or URL to generate QR code">
-                <button class="generate-btn">Generate QR</button>
             </div>
 
             <div class="qr-container">
